[tool.poetry]
name = "dnd5esheets"
version = "0.1.0"
description = "Character sheets for D&D 5e"
authors = ["Balthazar Rouberol <br@imap.cc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-slugify = "^8.0.1"
alembic = "^1.13.2"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.4" }
sqlalchemy = { extras = ["aiosqlite"], version = "^2.0.31" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
pydantic = "2.7.4"
python-multipart = "^0.0.9"
fastapi-jwt = "^0.3.0"
pydantic-settings = "^2.4.0"
sqladmin = "^0.18.0"
itsdangerous = "^2.1.2"
pygments = "^2.18.0"
orjson = "^3.10.6"
pyinstrument = "^4.5.3"
structlog = "^24.4.0"
asgi-correlation-id = "^4.2.0"
authlib = "^1.3.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.5"
types-passlib = "^1.7.7.13"
pytest = "^8.3.2"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.2"
types-python-slugify = "^8.0.0.2"
pytest-asyncio = "^0.23.8"
logging-tree = "^1.10"
rich = "^13.7.0"
sqla-graphs = { git = "https://github.com/edelooff/sqla-graphs.git" }
makefile2dot = "^1.0.2"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.30"
mkdocs-macros-plugin = "^1.0.5"

[tool.poetry.scripts]
dnd5esheets-cli = 'dnd5esheets.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 102

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-s"
filterwarnings = [
    # We ignore the deprecation warning thrown in passlib
    # until https://foss.heptapod.net/python-libs/passlib/-/issues/148 is resolved
    "ignore::DeprecationWarning:passlib.utils:854",

    # We ignore deprecation warnings about using datetime.datetime.utcnow in python 3.12
    # https://github.com/mpdavis/python-jose/issues/334
    "ignore::DeprecationWarning:jose.jwt:311",
]
testpaths = ["dnd5esheets/tests"]

[tool.mypy]
ignore_missing_imports = true
